Fixing header on mobile and about page

--- a/styles/scss/About.module.scss
+++ b/styles/scss/About.module.scss
@@ -14,11 +14,11 @@
 }
 
 .card {
-  background: $borderColor;
+  // background: $borderColor;
   padding: 30px;
   border-radius: 8px;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
-    rgba(0, 0, 0, 0.22) 0px 10px 10px;
+  // box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
+  // rgba(0, 0, 0, 0.22) 0px 10px 10px;
   max-width: 80vw;
   max-height: 80vh;
   height: fit-content;
@@ -63,10 +63,17 @@
 }
 
 @media (max-width: $mobileWidth) {
+  .aboutWrapper {
+    align-items: flex-start;
+  }
+
   .card {
     flex-direction: column;
     padding: 20px;
     max-height: fit-content;
+    background: none;
+    box-shadow: none;
+    max-width: 100%;
 
     .photo {
       width: 100%;
